<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
    schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="3">

  <name>sdpo_hangfaq2_nav_conf</name>

  <version>0.0.0</version>

  <description>
    Launch files required for the 5DPO Navigation Stack on the Hangfa Discovery
    Q2 (http://www.hangfa.com/EN/robot/DiscoveryQ2.html). The system implemented
    is based on the INESC TEC Robotics Navigation Stack that it allows you to
    have different configurations implemented and selecting just one based on
    your environment variables.
  </description>



  <maintainer email="sousa.ricardob@outlook.com">Ricardo B. Sousa</maintainer>

  <author email="amoreira@fe.up.pt">António Paulo Moreira</author>
  <author email="claudia.d.rocha@inesctec.pt">Cláudia Daniela Rocha</author>
  <author email="joao.g.martins@inesctec.pt">João G. Martins</author>
  <author email="up201806431@edu.fe.up.pt">João Pedro Costa</author>
  <author email="joaotomasmfgp@hotmail.com">João Tomás Padrão</author>
  <author email="jose.m.sarmento@inesctec.pt">José Maria Sarmento</author>
  <author email="up201806263@edu.fe.up.pt">José Pedro Carvalho</author>
  <author email="maria.s.lopes@inesctec.pt">Maria S. Lopes</author>
  <author email="paco@fe.up.pt">Paulo G. Costa</author>
  <author email="sousa.ricardob@outlook.com">Ricardo B. Sousa</author>



  <license>GNU General Public License version 3</license>



  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>sdpo_hangfaq2_driver</exec_depend>
  <exec_depend>sdpo_omnijoy_driver</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <exec_depend>sdpo_localization_odom</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>



  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
